# x-pass

./: app.py  config.yml  models.py  pyproject.toml  vault.db
data/: vault.db
encryption/: manager.py
helpers/: lists.py
